Update halaman register

--- a/register.html
+++ b/register.html
@@ -13,7 +13,7 @@
           <div class="col-md-6">
             <div class="box">
               <h2 class="text-center text-primary">Register</h2>
-              <form">
+              <form onsubmit="validateForm(event)">
                 <div class="mb-3">
                   <label for="username" class="form-label text-primary">Username</label>
                   <input type="text" class="form-control" id="username">
