--- a/home.html
+++ b/home.html
@@ -12,11 +12,11 @@
         <div class="row justify-content-center">
           <div class="col-md-6">
               <h2 class="text-center text-primary" id="user"></h2>
-                <button type="submit" class="btn btn-primary w-100 mt-3">Play</button>
-                <button type="submit" class="btn btn-primary w-100 mt-3">Logout</button>
+                <a href="login.html" class="btn btn-primary w-100 mt-3">Play</a>
+                <a href="login.html" class="btn btn-primary w-100 mt-3">Logout</a>
           </div>
         </div>
       </div>
-<script src="main.js"></script>
+<script src="javascript/main.js"></script>
 </body>
 </html>
