--- a/login.html
+++ b/login.html
@@ -29,6 +29,6 @@
           </div>
         </div>
       </div>
-<script src="main.js"></script>
+<script src="javascript/main.js"></script>
 </body>
 </html>
