Update js dan tampilan halaman home

--- a/home.html
+++ b/home.html
@@ -14,9 +14,12 @@
               <h2 class="text-center text-primary" id="user"></h2>
                 <a href="login.html" class="btn btn-primary w-100 mt-3">Play</a>
                 <a href="login.html" class="btn btn-primary w-100 mt-3">Logout</a>
+                <a href="login.html" class="btn btn-primary w-100 mt-3">Easy</a>
+                <a href="login.html" class="btn btn-primary w-100 mt-3">Medium</a>
+                <a href="login.html" class="btn btn-primary w-100 mt-3">Hard</a>
           </div>
         </div>
       </div>
-<script src="javascript/main.js"></script>
+<script src="javascript/home.js"></script>
 </body>
 </html>
