--- a/login.html
+++ b/login.html
@@ -15,11 +15,11 @@
               <h2 class="text-center text-primary">Login</h2>
               <form>
                 <div class="mb-3">
-                  <label for="loginEmail" class="form-label text-primary">Username</label>
+                  <label for="log-username" class="form-label text-primary">Username</label>
                   <input type="text" class="form-control" id="log-username">
                 </div>
                 <div class="mb-3">
-                  <label for="loginPassword" class="form-label text-primary">Password</label>
+                  <label for="log-password" class="form-label text-primary">Password</label>
                   <input type="password" class="form-control" id="log-password">
                 </div>
                 <button type="submit" class="btn btn-primary w-100 mb-3">Login</button>
