Memberi judul games

--- a/home.html
+++ b/home.html
@@ -8,15 +8,16 @@
   <title>Home Page</title>
 </head>
 <body>
-    <div class="container">
+    <div class="container mt-5">
         <div class="row justify-content-center">
           <div class="col-md-6">
+              <h1 class="text-center text-primary" id="games">Memory Indonesia</h1>
               <h2 class="text-center text-primary" id="user"></h2>
                 <a href="login.html" class="btn btn-primary w-100 mt-3">Play</a>
-                <a href="login.html" class="btn btn-primary w-100 mt-3">Logout</a>
                 <a href="login.html" class="btn btn-primary w-100 mt-3">Easy</a>
                 <a href="login.html" class="btn btn-primary w-100 mt-3">Medium</a>
                 <a href="login.html" class="btn btn-primary w-100 mt-3">Hard</a>
+                <a href="login.html" class="btn btn-primary w-100 mt-3">Logout</a>
           </div>
         </div>
       </div>
