--- a/login.html
+++ b/login.html
@@ -8,10 +8,11 @@
   <title>Login Page</title>
 </head>
 <body>
-    <div class="container">
+    <div class="container mt-5">
         <div class="row justify-content-center">
           <div class="col-md-6">
             <div class="box">
+              <h1 class="text-center text-primary">Memory Indonesia</h1>
               <h2 class="text-center text-primary">Login</h2>
               <form>
                 <div class="mb-3">
