Membenarkan js logout

--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
                 <a href="login.html" class="btn btn-primary w-100 mt-3">Easy</a>
                 <a href="login.html" class="btn btn-primary w-100 mt-3">Medium</a>
                 <a href="login.html" class="btn btn-primary w-100 mt-3">Hard</a>
-                <a href="login.html" class="btn btn-primary w-100 mt-3">Logout</a>
+                <a href="login.html" class="btn btn-primary w-100 mt-3" id="logout">Logout</a>
           </div>
         </div>
       </div>
