--- a/home.html
+++ b/home.html
@@ -13,10 +13,9 @@
           <div class="col-md-6">
               <h1 class="text-center text-primary" id="games">Memory Indonesia</h1>
               <h2 class="text-center text-primary" id="user"></h2>
-                <a href="login.html" class="btn btn-primary w-100 mt-3">Play</a>
-                <a href="login.html" class="btn btn-primary w-100 mt-3">Easy</a>
-                <a href="login.html" class="btn btn-primary w-100 mt-3">Medium</a>
-                <a href="login.html" class="btn btn-primary w-100 mt-3">Hard</a>
+                <a href="easy.html" class="btn btn-primary w-100 mt-3">Easy</a>
+                <a href="medium.html" class="btn btn-primary w-100 mt-3">Medium</a>
+                <a href="hard.html" class="btn btn-primary w-100 mt-3">Hard</a>
                 <a href="login.html" class="btn btn-primary w-100 mt-3" id="logout">Logout</a>
           </div>
         </div>
