--- a/medium.html
+++ b/medium.html
@@ -8,6 +8,23 @@
   <title>Medium Level</title>
 </head>
 <body>
+    <div class="center">
+        <div class="waviy">
+            <span style="--i:1">L</span>
+            <span style="--i:2">E</span>
+            <span style="--i:3">T</span>
+            <span style="--i:4">'</span>
+            <span style="--i:5">S</span>
+            <span style="--i:11">&nbsp</span>
+            <span style="--i:12">&nbsp</span>
+            <span style="--i:6">P</span>
+            <span style="--i:7">L</span>
+            <span style="--i:8">A</span>
+            <span style="--i:9">Y</span>
+            <span style="--i:10">!</span>
+           </div>
+    </div>
+
     <div class="container">
         <div class="card" style="width: 700px; height: 110px;">
             <h2 class="text-center mt-2">SCORE PANEL</h2>
