--- a/medium.html
+++ b/medium.html
@@ -4,28 +4,28 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="level.css">
+  <link rel="stylesheet" href="medium .css">
   <title>Medium Level</title>
 </head>
 <body>
     <div class="container">
-        <div class="card" style="width: 700px; height: 110px;">
-            <h2 class="text-center mt-2">SCORE PANEL</h2>
+        <div class="card" style="width: 955px; height: 120px; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;"">
+            <h2 class="text-center mt-3">SCORE PANEL</h2>
             <div class="score text-center">Score: <span>0</span></div>
 
             <div class="row">
-                <div class="col flips text-center">Flips: <span>0</span></div>
-                <div class="col time text-center">Time: <span>0 Secs</span></div>
+                <div class="col flips text-start" style="margin-left: 100px;">Flips: <span>0</span></div>
+                <div class="col flips text-end" style="margin-right: 100px;">Times: <span>0</span></div>
             </div>
         </div>
-
+                
         <div class="memory-card">
             <img class="front-view" src="img/front-view.png" alt="">
-            <img class="back-view" src="img/img-1.png" alt="">
+            <img class="back-view" src="img/img-7.png" alt="">
         </div>
         <div class="memory-card">
             <img class="front-view" src="img/front-view.png" alt="">
-            <img class="back-view" src="img/img-6.png" alt="">
+            <img class="back-view" src="img/img-8.png" alt="">
         </div>
 
         <div class="memory-card">
@@ -48,6 +48,15 @@
 
         <div class="memory-card">
             <img class="front-view" src="img/front-view.png" alt="">
+            <img class="back-view" src="img/img-1.png" alt="">
+        </div>
+        <div class="memory-card">
+            <img class="front-view" src="img/front-view.png" alt="">
+            <img class="back-view" src="img/img-6.png" alt="">
+        </div>
+
+        <div class="memory-card">
+            <img class="front-view" src="img/front-view.png" alt="">
             <img class="back-view" src="img/img-4.png" alt="">
         </div>
         <div class="memory-card">
@@ -66,6 +75,33 @@
 
         <div class="memory-card">
             <img class="front-view" src="img/front-view.png" alt="">
+            <img class="back-view" src="img/img-4.png" alt="">
+        </div>
+        <div class="memory-card">
+            <img class="front-view" src="img/front-view.png" alt="">
+            <img class="back-view" src="img/img-2.png" alt="">
+        </div>
+
+        <div class="memory-card">
+            <img class="front-view" src="img/front-view.png" alt="">
+            <img class="back-view" src="img/img-1.png" alt="">
+        </div>
+        <div class="memory-card">
+            <img class="front-view" src="img/front-view.png" alt="">
+            <img class="back-view" src="img/img-6.png" alt="">
+        </div>
+
+        <div class="memory-card">
+            <img class="front-view" src="img/front-view.png" alt="">
+            <img class="back-view" src="img/img-4.png" alt="">
+        </div>
+        <div class="memory-card">
+            <img class="front-view" src="img/front-view.png" alt="">
+            <img class="back-view" src="img/img-2.png" alt="">
+        </div>
+
+        <div class="memory-card">
+            <img class="front-view" src="img/front-view.png" alt="">
             <img class="back-view" src="img/img-3.png" alt="">
         </div>
         <div class="memory-card">
@@ -75,11 +111,11 @@
 
         <div class="memory-card">
             <img class="front-view" src="img/front-view.png" alt="">
-            <img class="back-view" src="img/img-7.png" alt="">
+            <img class="back-view" src="img/img-1.png" alt="">
         </div>
         <div class="memory-card">
             <img class="front-view" src="img/front-view.png" alt="">
-            <img class="back-view" src="img/img-8.png" alt="">
+            <img class="back-view" src="img/img-6.png" alt="">
         </div>
 
         <div class="memory-card">
@@ -90,8 +126,42 @@
             <img class="front-view" src="img/front-view.png" alt="">
             <img class="back-view" src="img/img-8.png" alt="">
         </div>
+        
+        <div class="memory-card">
+            <img class="front-view" src="img/front-view.png" alt="">
+            <img class="back-view" src="img/img-4.png" alt="">
+        </div>
+        <div class="memory-card">
+            <img class="front-view" src="img/front-view.png" alt="">
+            <img class="back-view" src="img/img-5.png" alt="">
+        </div>
 
+        <div class="memory-card">
+            <img class="front-view" src="img/front-view.png" alt="">
+            <img class="back-view" src="img/img-3.png" alt="">
+        </div>
+        <div class="memory-card">
+            <img class="front-view" src="img/front-view.png" alt="">
+            <img class="back-view" src="img/img-2.png" alt="">
+        </div>
 
+        <div class="memory-card">
+            <img class="front-view" src="img/front-view.png" alt="">
+            <img class="back-view" src="img/img-3.png" alt="">
+        </div>
+        <div class="memory-card">
+            <img class="front-view" src="img/front-view.png" alt="">
+            <img class="back-view" src="img/img-2.png" alt="">
+        </div>
+
+        <div class="memory-card">
+            <img class="front-view" src="img/front-view.png" alt="">
+            <img class="back-view" src="img/img-4.png" alt="">
+        </div>
+        <div class="memory-card">
+            <img class="front-view" src="img/front-view.png" alt="">
+            <img class="back-view" src="img/img-5.png" alt="">
+        </div>
 
     </div>
 <script src="javascript/easy.js"></script>
