--- a/easy.html
+++ b/easy.html
@@ -26,13 +26,13 @@
     </div>
 
     <div class="container">
-        <div class="card" style="width: 700px; height: 110px;">
-            <h2 class="text-center mt-2">SCORE PANEL</h2>
+        <div class="card" style="width: 750px; height: 120px; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;"">
+            <h2 class="text-center mt-3">SCORE PANEL</h2>
             <div class="score text-center">Score: <span>0</span></div>
 
             <div class="row">
-                <div class="col flips text-center">Flips: <span>0</span></div>
-                <div class="col time text-center">Time: <span>0 Secs</span></div>
+                <div class="col flips text-start" style="margin-left: 100px;">Flips: <span>0</span></div>
+                <div class="col flips text-end" style="margin-right: 100px;">Times: <span>0</span></div>
             </div>
         </div>
 
@@ -52,6 +52,15 @@
         <div class="memory-card">
             <img class="front-view" src="img/front-view.png" alt="">
             <img class="back-view" src="img/img-3.png" alt="">
+        </div>
+
+        <div class="memory-card">
+            <img class="front-view" src="img/front-view.png" alt="">
+            <img class="back-view" src="img/img-1.png" alt="">
+        </div>
+        <div class="memory-card">
+            <img class="front-view" src="img/front-view.png" alt="">
+            <img class="back-view" src="img/img-6.png" alt="">
         </div>
         
         <div class="memory-card">
@@ -74,11 +83,38 @@
 
         <div class="memory-card">
             <img class="front-view" src="img/front-view.png" alt="">
+            <img class="back-view" src="img/img-4.png" alt="">
+        </div>
+        <div class="memory-card">
+            <img class="front-view" src="img/front-view.png" alt="">
+            <img class="back-view" src="img/img-2.png" alt="">
+        </div>
+
+        <div class="memory-card">
+            <img class="front-view" src="img/front-view.png" alt="">
             <img class="back-view" src="img/img-5.png" alt="">
         </div>
         <div class="memory-card">
             <img class="front-view" src="img/front-view.png" alt="">
             <img class="back-view" src="img/img-4.png" alt="">
+        </div>
+
+        <div class="memory-card">
+            <img class="front-view" src="img/front-view.png" alt="">
+            <img class="back-view" src="img/img-1.png" alt="">
+        </div>
+        <div class="memory-card">
+            <img class="front-view" src="img/front-view.png" alt="">
+            <img class="back-view" src="img/img-6.png" alt="">
+        </div>
+
+        <div class="memory-card">
+            <img class="front-view" src="img/front-view.png" alt="">
+            <img class="back-view" src="img/img-4.png" alt="">
+        </div>
+        <div class="memory-card">
+            <img class="front-view" src="img/front-view.png" alt="">
+            <img class="back-view" src="img/img-2.png" alt="">
         </div>
 
         <div class="memory-card">
@@ -89,6 +125,26 @@
             <img class="front-view" src="img/front-view.png" alt="">
             <img class="back-view" src="img/img-1.png" alt="">
         </div>
+
+        <div class="memory-card">
+            <img class="front-view" src="img/front-view.png" alt="">
+            <img class="back-view" src="img/img-7.png" alt="">
+        </div>
+        <div class="memory-card">
+            <img class="front-view" src="img/front-view.png" alt="">
+            <img class="back-view" src="img/img-8.png" alt="">
+        </div>
+        
+        <div class="memory-card">
+            <img class="front-view" src="img/front-view.png" alt="">
+            <img class="back-view" src="img/img-7.png" alt="">
+        </div>
+        <div class="memory-card">
+            <img class="front-view" src="img/front-view.png" alt="">
+            <img class="back-view" src="img/img-8.png" alt="">
+        </div>
+
+
 
     </div>
 <script src="javascript/easy.js"></script>
