--- a/hard.html
+++ b/hard.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="hard.css">
-  <title>Hard Level</title>
+  <title>Memory Game | Hard Level</title>
 </head>
 <body>
     <div class="center">
@@ -26,7 +26,7 @@
     </div>
 
     <div class="container">
-        <div class="card" style="width: 1200px; height: 120px; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;"">
+        <div class="card" style="width: 1120px; height: 120px; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;"">
             <h2 class="text-center mt-3">SCORE PANEL</h2>
             <div class="score text-center">Score: <span>0</span></div>
 
