--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
-  <title>Home Page</title>
+  <title>Memory Game | Home</title>
 </head>
 <body>
     <div class="container mt-5">
