make page leaderboard

--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
                   <a href="#" onclick="showLevel()"><span>Start</span></a>
                 </div>
                 <div class="btn home-btn w-100 mt-2">
-                  <a href="#"><span>Leaderboard</span></a>
+                  <a href="leaderboard.html"><span>Leaderboard</span></a>
                 </div>
                 <div class="btn home-btn w-100 mt-2">
                   <a href="login.html" id="logout"><span>Logout</span></a>
