menambahkan logic game

--- a/hard.html
+++ b/hard.html
@@ -80,7 +80,7 @@
             <img class="front-view" src="img/front-view.png" alt="">
             <img class="back-view" src="img/img-6.png" alt="">
         </div>
-
+        
         <div class="memory-card">
             <img class="front-view" src="img/front-view.png" alt="">
             <img class="back-view" src="img/img-2.png" alt="">
@@ -179,7 +179,7 @@
             <img class="front-view" src="img/front-view.png" alt="">
             <img class="back-view" src="img/img-8.png" alt="">
         </div>
-        
+
         <div class="memory-card">
             <img class="front-view" src="img/front-view.png" alt="">
             <img class="back-view" src="img/img-4.png" alt="">
@@ -200,7 +200,7 @@
 
         <div class="memory-card">
             <img class="front-view" src="img/front-view.png" alt="">
-            <img class="back-view" src="img/img-3.png" alt="">
+            <img class="back-view" src="img/img-7.png" alt="">
         </div>
         <div class="memory-card">
             <img class="front-view" src="img/front-view.png" alt="">
@@ -217,6 +217,14 @@
         </div>
 
     </div>
-<script src="javascript/easy.js"></script>
+<script src="javascript/app.js"></script>
 </body>
+
+<script>
+
+    HardLevel();
+    shuffleCard();
+
+</script>
+
 </html>
