--- a/medium.html
+++ b/medium.html
@@ -181,6 +181,14 @@
         </div>
 
     </div>
-<script src="javascript/easy.js"></script>
+<script src="javascript/app.js"></script>
 </body>
+
+<script>
+
+    MediumLevel();
+    shuffleCard();
+
+</script>
+
 </html>
