--- a/easy.html
+++ b/easy.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="level.css">
-  <title>Memory Game | Easy Level</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="level.css">
+    <title>Memory Game | Easy Level</title>
 </head>
+
 <body>
     <div class="center">
         <div class="waviy">
@@ -22,12 +24,13 @@
             <span style="--i:8">A</span>
             <span style="--i:9">Y</span>
             <span style="--i:10">!</span>
-           </div>
+        </div>
     </div>
 
     <div class="container">
-        <div class="card" style="width: 750px; height: 120px; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;"">
-            <h2 class="text-center mt-3">SCORE PANEL</h2>
+        <div class="card"
+            style="width: 750px; height: 120px; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;"">
+            <h2 class=" text-center mt-3">SCORE PANEL</h2>
             <div class="score text-center">Score: <span>0</span></div>
 
             <div class="row">
@@ -144,9 +147,14 @@
             <img class="back-view" src="img/img-8.png" alt="">
         </div>
 
-
-
-    </div>
-<script src="javascript/easy.js"></script>
+    <script src="javascript/app.js"></script>
 </body>
+
+<SCript>
+
+    easyLevel();
+    shuffleCard();
+    
+</SCript>
+
 </html>
