add attempt and time count

--- a/easy.html
+++ b/easy.html
@@ -34,8 +34,8 @@
             <div class="score text-center">Score: <span>0</span></div>
 
             <div class="row">
-                <div class="col flips text-start" style="margin-left: 100px;">Flips: <span>0</span></div>
-                <div class="col flips text-end" style="margin-right: 100px;">Times: <span>0</span></div>
+                <div class="col flips text-start" style="margin-left: 100px;">Attempt: <span id="attempt">0</span></div>
+                <div class="col flips text-end" style="margin-right: 100px;">Times: <span id="time">0</span></div>
             </div>
         </div>
 
