--- a/home.html
+++ b/home.html
@@ -5,13 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
+  <!-- BOX ICON -->
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <title>Memory Game | Home</title>
 </head>
 <body>
     <div class="container mt-4">
         <div class="row justify-content-center">
           <div class="col-md-6">
-              <h1 class="text-center text-primary" id="games">Memory Indonesia</h1>
+              <h1 class="text-center text-primary" id="games">Memory Digital</h1>
               <h2 class="text-center text-primary" id="user"></h2>
               <div class="menu mt-5">
                 <div class="btn home-btn w-100 mt-2">
@@ -35,6 +37,9 @@
                 <div class="btn home-btn w-100 mt-2">
                   <a href="hard.html"><span>Hard</span></a>
                 </div>
+                <a href="home.html">
+                  <i class="bx bx-arrow-back bx-fade-right fs-2" style="color:#0d6efd"></i>
+                </a>                               
               </div>
           </div>
         </div>
