--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
         <div class="row justify-content-center">
           <div class="col-md-6">
             <div class="box">
-              <h1 class="text-center text-primary">Memory Indonesia</h1>
+              <h1 class="text-center text-primary">Memory Digital</h1>
               <h2 class="text-center text-primary">Login</h2>
               <form>
                 <div class="mb-3">
