--- a/register.html
+++ b/register.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
+  <!-- BOX ICON -->
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <title>Register Page</title>
 </head>
 <body>
@@ -26,6 +28,9 @@
                   <label for="password" class="form-label text-primary">Password</label>
                   <input type="password" class="form-control" id="password">
                 </div>
+                <a href="login.html">
+                  <i class="bx bx-arrow-back bx-fade-right fs-2" style="color:#0d6efd"></i>
+                </a>     
                 <button type="submit" class="btn btn-primary w-100 mb-3" id="daftar">Daftar</button>
               </form>
             </div>
