Menambahkan backsound lagu pada halaman home,easy,medium dan hard

--- a/easy.html
+++ b/easy.html
@@ -147,6 +147,9 @@
             <img class="back-view" src="img/img-8.png" alt="">
         </div>
 
+    <audio id="myAudio" autoplay>
+        <source src="sound/backsound.mp3" type="audio/mpeg">
+    </audio>
     <script src="javascript/app.js"></script>
 </body>
 
