--- a/home.html
+++ b/home.html
@@ -41,6 +41,9 @@
                   <i class="bx bx-arrow-back bx-fade-right fs-2" style="color:#0d6efd"></i>
                 </a>                               
               </div>
+              <audio id="myAudio" autoplay>
+                <source src="sound/backsound.mp3" type="audio/mpeg">
+              </audio>
           </div>
         </div>
       </div>
