--- a/hard.html
+++ b/hard.html
@@ -217,6 +217,9 @@
         </div>
 
     </div>
+<audio id="myAudio" autoplay>
+    <source src="sound/backsound.mp3" type="audio/mpeg">
+</audio>
 <script src="javascript/app.js"></script>
 </body>
 
