--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
   <title>Memory Game | Home</title>
 </head>
 <body>
-    <div class="container mt-4">
+    <div class="container mt-5">
         <div class="row justify-content-center">
           <div class="col-md-6">
               <h1 class="text-center text-primary" id="games">Memory Digital</h1>
@@ -37,9 +37,9 @@
                 <div class="btn home-btn w-100 mt-2">
                   <a href="hard.html"><span>Hard</span></a>
                 </div>
-                <a href="home.html">
+                <a href="#" onclick="hideLevel()">
                   <i class="bx bx-arrow-back bx-fade-right fs-2" style="color:#0d6efd"></i>
-                </a>                               
+                </a>                                            
               </div>
               <audio id="myAudio" autoplay>
                 <source src="sound/backsound.mp3" type="audio/mpeg">
