--- a/easy.html
+++ b/easy.html
@@ -153,11 +153,11 @@
     <script src="javascript/app.js"></script>
 </body>
 
-<SCript>
+<Script>
 
     easyLevel();
     shuffleCard();
     
-</SCript>
+</Script>
 
 </html>
