Mengubah nama file login menjadi index

--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
                   <a href="leaderboard.html"><span>Leaderboard</span></a>
                 </div>
                 <div class="btn home-btn w-100 mt-2">
-                  <a href="login.html" id="logout"><span>Logout</span></a>
+                  <a href="index.html" id="logout"><span>Logout</span></a>
                 </div>
               </div>
               
