--- a/register.html
+++ b/register.html
@@ -28,7 +28,7 @@
                   <label for="password" class="form-label text-primary">Password</label>
                   <input type="password" class="form-control" id="password">
                 </div>
-                <a href="login.html">
+                <a href="index.html">
                   <i class="bx bx-arrow-back bx-fade-right fs-2" style="color:#0d6efd"></i>
                 </a>     
                 <button type="submit" class="btn btn-primary w-100 mb-3" id="daftar">Daftar</button>
