--- a/home.html
+++ b/home.html
@@ -13,8 +13,22 @@
     <div class="container mt-5">
         <div class="row justify-content-center">
           <div class="col-md-6">
-              <h1 class="text-center text-primary" id="games">Memory Digital</h1>
-              <h2 class="text-center text-primary" id="user"></h2>
+              <h1 class="text-center" id="games">
+                <span>M</span>
+                <span>E</span>
+                <span>M</span>
+                <span>O</span>
+                <span>R</span>
+                <span>Y</span>
+                <span>&nbsp</span>
+                <span>D</span>
+                <span>I</span>
+                <span>G</span>
+                <span>I</span>
+                <span>T</span>
+                <span>A</span>
+                <span>L</span></h1>
+              <h2 class="text-center text-white" id="user"></h2>
               <div class="menu mt-5">
                 <div class="btn home-btn w-100 mt-2">
                   <a href="#" onclick="showLevel()"><span>Start</span></a>
