--- a/home.html
+++ b/home.html
@@ -63,5 +63,7 @@
       </div>
 
 <script src="javascript/home.js"></script>
+<script src="javascript/sweetalert.min.js"></script>
+
 </body>
 </html>
