--- a/login.html
+++ b/login.html
@@ -31,5 +31,7 @@
         </div>
       </div>
 <script src="javascript/main.js"></script>
+<script src="javascript/sweetalert.min.js"></script>
+
 </body>
 </html>
