--- a/register.html
+++ b/register.html
@@ -39,5 +39,7 @@
       </div>
 
 <script src="javascript/register.js"></script>
+<script src="javascript/sweetalert.min.js"></script>
+
 </body>
 </html>
