alert ketika game selesai

--- a/medium.html
+++ b/medium.html
@@ -28,7 +28,7 @@
     <div class="container">
         <div class="card" style="width: 955px; height: 120px; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;"">
             <h2 class="text-center mt-3">SCORE PANEL</h2>
-            <div class="score text-center">Score: <span>0</span></div>
+            <!-- <div class="score text-center">Score: <span>0</span></div> -->
 
             <div class="row">
                 <div class="col flips text-start" style="margin-left: 100px;">Attempt: <span id="attempt">0</span></div>
@@ -184,7 +184,9 @@
 <audio id="myAudio" autoplay>
     <source src="sound/medium.mp3" type="audio/mpeg">
 </audio>
+
 <script src="javascript/app.js"></script>
+<script src="javascript/sweetalert.min.js"></script>
 </body>
 
 <script>
